--- a/cpython/PCbuild/uwp/_ssl.vcxproj.filters
+++ b/cpython/PCbuild/uwp/_ssl.vcxproj.filters
@@ -9,7 +9,7 @@
     <ClCompile Include="..\..\Modules\_ssl.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\PC\winrtapi.cpp">
+    <ClCompile Include="..\..\PC\uwpapi.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
