--- a/.gitignore
+++ b/.gitignore
@@ -184,15 +184,15 @@ FakesAssemblies/
 
 # Python work
 lib.zip
-cpython/Tools/pyuwp/winrt/
+cpython/Tools/pyuwp/uwp/
 Generated Files/
 cpython/PC/pythonnt_rc*.h
 cpython/python.bat
 cpython/PCbuild/win32/
-cpython/PCbuild/winrt/8.2/
+cpython/PCbuild/uwp/8.2/
 cpython/externals/
-wini2c/winrt/8.2/
-wingpio/winrt/
-winspi/winrt/
+wini2c/uwp/8.2/
+wingpio/uwp/
+winspi/uwp/
 
-winrt/8.2/
+uwp/8.2/
