--- a/cpython/Tools/pyuwp/pyuwpsdk/pyuwpsdk.csproj
+++ b/cpython/Tools/pyuwp/pyuwpsdk/pyuwpsdk.csproj
@@ -22,7 +22,7 @@
     <IncludeDebugSymbolsInLocalVSIXDeployment>false</IncludeDebugSymbolsInLocalVSIXDeployment>
     <CopyBuildOutputToOutputDirectory>false</CopyBuildOutputToOutputDirectory>
     <CopyOutputSymbolsToOutputDirectory>false</CopyOutputSymbolsToOutputDirectory>
-    <InputDir>$(SolutionDir)winrt\8.2</InputDir>
+    <InputDir>$(SolutionDir)uwp\8.2</InputDir>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
