Update SDK version & various build fixes

--- a/cpython/PCbuild/uwp/_ctypes_test.vcxproj.filters
+++ b/cpython/PCbuild/uwp/_ctypes_test.vcxproj.filters
@@ -9,12 +9,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Modules\_ctypes\_ctypes_test.h">
+    <ClInclude Include="..\..\Modules\_ctypes\_ctypes_test.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Modules\_ctypes\_ctypes_test.c">
+    <ClCompile Include="..\..\Modules\_ctypes\_ctypes_test.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
