--- a/cpython/PCbuild/uwp/_ctypes.vcxproj.filters
+++ b/cpython/PCbuild/uwp/_ctypes.vcxproj.filters
@@ -9,56 +9,56 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Modules\_ctypes\ctypes.h">
+    <ClInclude Include="..\..\Modules\_ctypes\ctypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Modules\_ctypes\ctypes_dlfcn.h">
+    <ClInclude Include="..\..\Modules\_ctypes\ctypes_dlfcn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Modules\_ctypes\libffi_msvc\ffi.h">
+    <ClInclude Include="..\..\Modules\_ctypes\libffi_msvc\ffi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Modules\_ctypes\libffi_msvc\ffi_common.h">
+    <ClInclude Include="..\..\Modules\_ctypes\libffi_msvc\ffi_common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Modules\_ctypes\libffi_msvc\fficonfig.h">
+    <ClInclude Include="..\..\Modules\_ctypes\libffi_msvc\fficonfig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Modules\_ctypes\libffi_msvc\ffitarget.h">
+    <ClInclude Include="..\..\Modules\_ctypes\libffi_msvc\ffitarget.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Modules\_ctypes\_ctypes.c">
+    <ClCompile Include="..\..\Modules\_ctypes\_ctypes.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\_ctypes\callbacks.c">
+    <ClCompile Include="..\..\Modules\_ctypes\callbacks.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\_ctypes\callproc.c">
+    <ClCompile Include="..\..\Modules\_ctypes\callproc.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\_ctypes\cfield.c">
+    <ClCompile Include="..\..\Modules\_ctypes\cfield.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\_ctypes\libffi_msvc\ffi.c">
+    <ClCompile Include="..\..\Modules\_ctypes\libffi_msvc\ffi.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\_ctypes\malloc_closure.c">
+    <ClCompile Include="..\..\Modules\_ctypes\malloc_closure.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\_ctypes\libffi_msvc\prep_cif.c">
+    <ClCompile Include="..\..\Modules\_ctypes\libffi_msvc\prep_cif.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\_ctypes\stgdict.c">
+    <ClCompile Include="..\..\Modules\_ctypes\stgdict.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\_ctypes\libffi_msvc\win32.c">
+    <ClCompile Include="..\..\Modules\_ctypes\libffi_msvc\win32.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="..\Modules\_ctypes\libffi_msvc\win64.asm">
+    <CustomBuild Include="..\..\Modules\_ctypes\libffi_msvc\win64.asm">
       <Filter>Source Files</Filter>
     </CustomBuild>
   </ItemGroup>
