--- a/cpython/PCbuild/uwp/pyexpat.vcxproj.filters
+++ b/cpython/PCbuild/uwp/pyexpat.vcxproj.filters
@@ -9,24 +9,24 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Modules\expat\xmlrole.h">
+    <ClInclude Include="..\..\Modules\expat\xmlrole.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Modules\expat\xmltok.h">
+    <ClInclude Include="..\..\Modules\expat\xmltok.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Modules\pyexpat.c">
+    <ClCompile Include="..\..\Modules\pyexpat.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\expat\xmlparse.c">
+    <ClCompile Include="..\..\Modules\expat\xmlparse.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\expat\xmlrole.c">
+    <ClCompile Include="..\..\Modules\expat\xmlrole.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Modules\expat\xmltok.c">
+    <ClCompile Include="..\..\Modules\expat\xmltok.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
