--- a/cpython/PCbuild/uwp/select.vcxproj
+++ b/cpython/PCbuild/uwp/select.vcxproj
@@ -36,6 +36,8 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <GenerateManifest>false</GenerateManifest>
     <ProjectGuid>{A1863EDB-6843-4B69-896B-E9183E94751C}</ProjectGuid>
+    <WindowsTargetPlatformVersion>10.0.10240.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformMinVersion>10.0.10240.0</WindowsTargetPlatformMinVersion>
   </PropertyGroup>
   <Import Project="..\python.props" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
