--- a/cpython/Tools/pyuwp/ptvsdhelper/_ptvsdhelper.vcxproj
+++ b/cpython/Tools/pyuwp/ptvsdhelper/_ptvsdhelper.vcxproj
@@ -37,6 +37,8 @@
     <ApplicationTypeRevision>8.2</ApplicationTypeRevision>
     <DefaultLanguage>en-US</DefaultLanguage>
     <GenerateManifest>false</GenerateManifest>
+    <WindowsTargetPlatformVersion>10.0.10240.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformMinVersion>10.0.10240.0</WindowsTargetPlatformMinVersion>
   </PropertyGroup>
   <Import Project="..\..\..\PCBuild\python.props" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
