--- a/cpython/Tools/pyuwp/pyuwpbackgroundservice/pyuwpbackgroundservice.vcxproj
+++ b/cpython/Tools/pyuwp/pyuwpbackgroundservice/pyuwpbackgroundservice.vcxproj
@@ -41,6 +41,8 @@
     <AppxPackageSigningEnabled>true</AppxPackageSigningEnabled>
     <PackageCertificateKeyFile>pyuwpbackgroundservice_TemporaryKey.pfx</PackageCertificateKeyFile>
     <ContainsStartupTask>true</ContainsStartupTask>
+    <WindowsTargetPlatformVersion>10.0.10240.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformMinVersion>10.0.10240.0</WindowsTargetPlatformMinVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
